# c-game-tutorial

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
build-debug/: .ninja_deps  .ninja_log  build.ninja  cpp_game
build-release/: .ninja_deps  .ninja_log  build.ninja
src/: Alien.cpp  Alien.hpp  Block.cpp  Block.hpp  MisteryShip.cpp  MisteryShip.hpp  Obstacle.cpp  Obstacle.hpp  Spaceship.cpp  Spaceship.hpp  game.cpp  game.hpp  laser.cpp  laser.hpp  main.cpp
